--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ ul {
 
 .astro-gallery {
   display: flex;
-  flex-wrap: column;
+  flex-direction: column;
   gap: 20px;
-  justify-content: center;
+  align-items: center;
 }
 
 .astro-item {
